# AI_task_ass

./: .env.example  README.md  STRUCTURE.md  memory.db  pyproject.toml  requirements.txt  streamlit_app.py
backend/: orchestrator.py
backend/agents/: explainer_agent.py  parser_agent.py  router_agent.py  solver.py  verifier_agent.py
backend/hitl/: confidence_manager.py  feedback_handler.py
backend/llm/: groq_client.py
backend/memory/: memory_retriever.py  memory_store.py  schema.sql
backend/multimodal/: audio_preprocessor.py  image_preprocessor.py  input_router.py  text_preprocessor.py
backend/rag/: build_index.py  embedder.py  retriever.py
backend/rag/knowledege_base/: algebra.md  calculus.md  linear_algebra.md  probability.md
backend/tools/: symbolic_math.py
data/vector_index/: math_index.faiss  metadata.json
tests/: groq_test.py
